Fix spacing

--- a/src/styles/components/multiple-form.less
+++ b/src/styles/components/multiple-form.less
@@ -88,6 +88,10 @@
 
     &-left-column {
       padding: @base-spacing-unit 0 0 @base-spacing-unit;
+
+      .media-object-spacing-wrapper {
+        margin-right: 0;
+      }
     }
   }
 
